--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -55,7 +55,7 @@
     "contactButton": "Talk to Me",
     "mapTitle": "Location on Map",
     "location": "Campos dos Goytacazes, RJ, Brazil",
-    "mapAvatarAlt": "Developer Avatar on Map"
+    "mapAvatarAltGeneric": "Person on Map"
   },
   "skills": {
     "title": "My",
@@ -162,20 +162,35 @@
       "duration": "2018 - 2022",
       "description": "Focus on software dev, algorithms, data structures, AI. Developed an academic management system (final project).",
       "highlight1": "Final Project: Academic Management System (Grade A).",
-      "highlight2": "Participation in programming marathons."
+      "highlight2": "Participation in programming marathons.",
+      "skills": [
+        {"name": "JavaScript", "proficiency": 70, "iconName": "JavaScript"},
+        {"name": "Node.js", "proficiency": 60, "iconName": "Nodejs"},
+        {"name": "React", "proficiency": 50, "iconName": "React"}
+      ]
     },
     "webDevCourse": {
       "degree": "Technical Course in Web Development",
       "institution": "Federal Fluminense Institute (IFF)",
       "duration": "2015 - 2017",
       "description": "Comprehensive technical training in web dev (front/back-end), UI design, databases, and networks.",
-      "highlight1": "Project: Local News Portal (HTML, CSS, JS, PHP)."
+      "highlight1": "Project: Local News Portal (HTML, CSS, JS, PHP).",
+      "skills": [
+        {"name": "HTML", "proficiency": 90, "iconName": "HTML"},
+        {"name": "CSS", "proficiency": 85, "iconName": "CSS"},
+        {"name": "PostgreSQL", "proficiency": 55, "iconName": "PostgreSQL"}
+      ]
     },
     "nextjsCert": {
       "degree": "Next.js Developer Certification",
       "institution": "Online Platform X",
       "duration": "2023",
-      "description": "Intensive course on Next.js best practices: App Router, Server Components, performance optimizations, React, TypeScript."
+      "description": "Intensive course on Next.js best practices: App Router, Server Components, performance optimizations, React, TypeScript.",
+      "skills": [
+        {"name": "React", "proficiency": 90, "iconName": "React"},
+        {"name": "TypeScript", "proficiency": 75, "iconName": "TypeScript"},
+        {"name": "TailwindCSS", "proficiency": 70, "iconName": "TailwindCSS"}
+      ]
     }
   },
   "testimonials": {
