--- a/src/lib/locales/pt.json
+++ b/src/lib/locales/pt.json
@@ -55,7 +55,7 @@
     "contactButton": "Fale Comigo",
     "mapTitle": "Localização no Mapa",
     "location": "Campos dos Goytacazes, RJ, Brasil",
-    "mapAvatarAltGeneric": "Pessoa no Mapa"
+    "mapPinLabel": "Pino do Mapa indicando localização em Campos dos Goytacazes"
   },
   "skills": {
     "title": "Minhas",
@@ -101,7 +101,7 @@
       "title": "Website Portfolio Pessoal",
       "description": "Este próprio site de portfólio, construído com Next.js, TypeScript e TailwindCSS para uma experiência visual moderna."
     },
-    "chatbot": {
+    "chatbotProject": {
       "title": "Chatbot de Atendimento",
       "description": "Chatbot inteligente para automação de suporte ao cliente, integrado com plataformas de mensageria usando Node.js."
     },
@@ -162,35 +162,20 @@
       "duration": "2018 - 2022",
       "description": "Foco em desenvolvimento de software, algoritmos, estruturas de dados, IA. Desenvolvi um sistema de gerenciamento acadêmico (TCC).",
       "highlight1": "TCC: Sistema de Gerenciamento Acadêmico (Nota A).",
-      "highlight2": "Participação em maratonas de programação.",
-      "skills": [
-        {"name": "JavaScript", "proficiency": 70, "iconName": "JavaScript"},
-        {"name": "Node.js", "proficiency": 60, "iconName": "Nodejs"},
-        {"name": "React", "proficiency": 50, "iconName": "React"}
-      ]
+      "highlight2": "Participação em maratonas de programação."
     },
     "webDevCourse": {
       "degree": "Curso Técnico em Informática para Internet",
       "institution": "Instituto Federal Fluminense (IFF)",
       "duration": "2015 - 2017",
       "description": "Formação técnica abrangente em desenvolvimento web (front/back-end), design de interfaces, BDs e redes.",
-      "highlight1": "Projeto: Portal de Notícias Local (HTML, CSS, JS, PHP).",
-      "skills": [
-        {"name": "HTML", "proficiency": 90, "iconName": "HTML"},
-        {"name": "CSS", "proficiency": 85, "iconName": "CSS"},
-        {"name": "PostgreSQL", "proficiency": 55, "iconName": "PostgreSQL"}
-      ]
+      "highlight1": "Projeto: Portal de Notícias Local (HTML, CSS, JS, PHP)."
     },
     "nextjsCert": {
       "degree": "Certificação Next.js Developer",
       "institution": "Plataforma Online X",
       "duration": "2023",
-      "description": "Curso intensivo focado em Next.js: App Router, Server Components, otimizações de performance, React, TypeScript.",
-      "skills": [
-        {"name": "React", "proficiency": 90, "iconName": "React"},
-        {"name": "TypeScript", "proficiency": 75, "iconName": "TypeScript"},
-        {"name": "TailwindCSS", "proficiency": 70, "iconName": "TailwindCSS"}
-      ]
+      "description": "Curso intensivo focado em Next.js: App Router, Server Components, otimizações de performance, React, TypeScript."
     }
   },
   "testimonials": {
@@ -232,5 +217,26 @@
     "githubLabel": "Perfil no GitHub",
     "linkedinLabel": "Perfil no LinkedIn",
     "emailLabel": "Enviar Email"
+  },
+  "chatbot": {
+    "openAriaLabel": "Abrir Chat EduBot",
+    "closeAriaLabel": "Fechar Chat EduBot",
+    "iconAlt": "Ícone de Morcego EduBot",
+    "headerTitle": "🦇 EduBot",
+    "inputPlaceholder": "Manda a braba...",
+    "sendButton": "Enviar",
+    "sendingButton": "Enviando...",
+    "stopButton": "Parar",
+    "clearButton": "Limpar",
+    "thinking": "O Edu está pensando... 🕶️",
+    "stopped": "⛔ Parou.",
+    "errorPrefix": "Erro",
+    "errorDefault": "Opa! Algo deu errado. Tente novamente.",
+    "fileTooLarge": "Arquivo muito grande. Máximo 4MB.",
+    "fileConversionError": "Erro ao processar a imagem. Tente outra.",
+    "imageSent": "[Imagem Enviada]",
+    "uploadedImageAlt": "Imagem enviada",
+    "imagePreview": "Prévia da Imagem:",
+    "imagePreviewAlt": "Prévia da imagem enviada"
   }
 }
